# slam_3d_lib

./: CMakeLists.txt  package.xml
gitstats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
include/SlamLib/: tic_toc.hpp
include/SlamLib/Ceres/Parameterization/: PoseSE3Parameterization.hpp  QuaternionXYZPose_local_parameterization.hpp  SE3Pose_local_parameterization.hpp
include/SlamLib/Ceres/ceres_factor/: edge_factor.hpp  surf_factor.hpp
include/SlamLib/Common/: color.hpp  math.hpp  point_type.h  pointcloud.h  pose.hpp  utility.hpp
include/SlamLib/Map/: LocalMap.hpp  TimedSlidingLocalMap.hpp  iVoxTimedSlidingLocalMap.hpp
include/SlamLib/Map/ivox3d/: eigen_types.h  ivox3d.h  ivox3d_node.hpp
include/SlamLib/PointCloud/Cluster/: DbscanCluster.h  DbscanCluster_impl.hpp  EuclideanCluster.h  EuclideanCluster_impl.hpp  Segmentation.hpp
include/SlamLib/PointCloud/Filter/: filter_base.h  outlier_removal.h  voxel_grid.h
include/SlamLib/PointCloud/GlobalDescriptor/scanContext/: Scancontext.hpp
include/SlamLib/PointCloud/Registration/: PCLRegistration.h  PCLRegistration_impl.hpp  alignEvaluate.hpp  ceres_edgeSurfFeatureRegistration.h  ceres_edgeSurfFeatureRegistration_impl.hpp  edgeSurfFeatureRegistration.h  edgeSurfFeatureRegistration_impl.hpp  ndtompRegistration.h  ndtompRegistration_impl.hpp  registration_base.h
include/SlamLib/PointCloud/Registration/FeatureMatch/: EdgeFeatureMatch.hpp  FeatureMatchBase.hpp  surfFeatureMatch.hpp
src/: test.cpp
src/PointCloud/Cluster/: DbscanCluster.cpp  EuclideanCluster.cpp
src/PointCloud/Filter/: filter_base.cpp  outlier_removal.cpp  voxel_grid.cpp
src/PointCloud/Registration/: PCLRegistration.cpp  ceres_edgeSurfFeatureRegistration.cpp  edgeSurfFeatureRegistration.cpp  ndtompRegistration.cpp
src/calibration/: handeye_calibration_base.cpp
